# kathara-lab-checker

./: .gitignore  README.md  check-priorities.md  configuration.json  configurationMirada.json  configurationPalabra.json  lib.py  logger.py  main.py  pyproject.toml  requirements.txt
examples/: configuration_palabra.json
examples/bgp_ipv4_ipv6/: correction.yaml
examples/bgp_ipv4_ipv6/lab/: lab.conf  r2.startup  r5.startup  r6.startup
examples/bgp_ipv4_ipv6/lab_with_errors/: lab.conf  r1.startup  r3.startup  r4.startup  r5.startup  r6.startup
examples/bgp_ipv6/: correction.yaml
examples/bgp_ipv6/lab/: lab.conf  r1.startup  r2.startup
examples/ospf_http/: correction.yaml
examples/ospf_http/lab/: lab.conf  router1.startup  router2.startup  router3.startup
examples/palabra/: configuration_palabra.json  correction.json  results.xlsx
examples/palabra/lab1/: as3r2.startup  failed.txt  lab.conf  lab1_result.xlsx  net.startup  pc.startup  root.startup
examples/palabra/lab2/: as1r1.startup  (+9 more)
resources/: Mirada.conf
resources/structure/: lab.conf
scripts/docker/: Dockerfile  README.md
scripts/pip-package/: README.md
src/: TestCollector.py  kathara_lab_checker.py  main.py  utils.py
src/checks/: AbstractCheck.py  BridgeCheck.py  BridgeCheck_.py  CheckResult.py  CollisionDomainCheck.py  DaemonCheck.py  DeviceExistenceCheck.py  InterfaceIPCheck.py  KernelRouteCheck.py  ReachabilityCheck.py  StartupExistenceCheck.py
src/kathara_lab_checker/: TestCollector.py  TqdmLoggingHandler.py  __main__.py  csv_utils.py  excel_utils.py  utils.py
src/lab_checker/: excel_utils.py
(+185 files in other folders)
